# TP-Cripto

./: CMakeLists.txt  README.md  bmp.c  bmp.h  enunciado.txt  main.c  parser.c  parser.h  secreto.txt  sol2.txt  stegobmp.h
include/: bmp.h  stegobmp.h
include/analysis/: stego_analysis.h
include/bmp/: bmp.h  bmp_utils.h
include/crypto/: crypto.h
include/parser/: parser.h
include/stegobmp/: stegobmp.h  stegobmp_hide.h  stegobmp_lsb.h  stegobmp_utils.h
scripts/: build.sh  test_crypto_workflow.sh
src/: bmp.c  parser.c  stegobmp.c
src/analysis/: stego_analysis.c
src/bmp/: bmp.c  bmp_utils.c
src/crypto/: crypto.c
src/parser/: parser.c
src/stegobmp/: stegobmp.c  stegobmp_hide.c  stegobmp_lsb.c  stegobmp_utils.c
